Fix public search page contrast issues

--- a/arches/app/media/css/accessibility.scss
+++ b/arches/app/media/css/accessibility.scss
@@ -1,3 +1,105 @@
 // Use this stylesheet to apply style specific to accessibility that can be 
 // applied over all other styles.  The admin can choose to run the site in
 // "accessibility mode" to apply these styles site-wide.
+
+$search-links: #315B7D;
+$search-tab-buttons-txt: #545454;
+$search-tab-buttons-bg: #FFF;
+$general-txt: #000;
+$btn-primary: #2B4E6D;
+$btn-clear-filters: #15503F;
+$profile-txt-general: #595959;
+$debug: #FFF;
+$leftnav-active: #184E6C;
+$leftnav-active-pointer: transparent #FFF transparent transparent;
+
+a {
+    &.search-candidate-title,
+    &.search-candidate-link {
+        color: $search-links;
+        &:hover,
+        &:focus {
+            text-decoration: underline;
+        }
+    }
+}
+
+.search-type-btn, .search-type-btn-popup {
+    color: $search-tab-buttons-txt;
+}
+
+.search-type-btn.relative:hover,
+.search-type-btn.relative:focus,
+.search-type-btn-popup.relative:hover,
+.search-type-btn-popup.relative:focus {
+    text-decoration: underline;
+    background: $search-tab-buttons-bg;
+}
+
+.select2-default,
+.chosen-container-single .chosen-single,
+.search-listing-body,
+.map-sidebar-text,
+.search-export .instruction h4,
+.rr-splash-description,
+.time-wheel-instructions,
+.search-facet-item.header input::placeholder,
+.time-search-container #search-from-c .input-md::placeholder,
+.time-search-container #search-from-b .input-md::placeholder, {
+    color: $general-txt!important;
+}
+
+.btn-primary,
+.library-icon .bg-primary,
+.select2-container-multi .select2-choices .select2-search-choice {
+    background-color: $btn-primary;
+}
+
+.pagination>.active>a,
+.pagination>.active>span,
+.pagination>.active>a:hover,
+.pagination>.active>span:hover,
+.pagination>.active>a:focus,
+.pagination>.active>span:focus {
+    background-color: $btn-primary;
+    border-color: $btn-primary;
+}
+
+.profile-label-shim,
+.profile-default-message-panel,
+.search-listing-body,
+.account-tips,
+.hover-feature-metadata,
+.pagination > li > a.disabled,
+.graph-designer-header,
+.graph-type {
+    color: $profile-txt-general;
+}
+
+.debug-notice {
+    color: $debug;
+}
+
+.sidenav-sm {
+	.sidenav-menu {
+		.active-sub {
+			a {
+				background-color: $leftnav-active;
+                &:after {
+					display: inline-block;
+                    border-style: solid;
+                    border-width: 5px 10px 5px 0;
+                    border-color: $leftnav-active-pointer;
+                    content: " ";
+                    position: relative;
+                    top: calc(-50% - 11px);
+                    left: 20px;
+				}
+			}
+		}
+	}
+}
+
+.btn-mint {
+    background-color: $btn-clear-filters!important;
+}
